[package]
authors = ["Evert van de Waal <evert@vdwi-software.nl>"]
edition = "2018"
readme = "README.md"
name = "rc-client"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"
embedded-hal = "0.2"
nb = "1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f4xx-hal]
features = ["stm32f446", "rt"]
version = "0.17"

# this lets you use `cargo fix`!
[[bin]]
name = "rc-client"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
